Move 2020 problems into subfolder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aoc2020"
+name = "aoc"
 version = "0.1.0"
 authors = ["Philipp Jung <philipp.jung@mailbox.org>"]
 edition = "2018"
