--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ log = {version = "", features = ["release_max_level_warn"]}
 env_logger = ""
 test-env-log = ""
 num = ""
+itertools = ""
+regex = ""
