--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = {version = "", features = ["release_max_level_warn"]}
+log = {version = "", features = ["release_max_level_info"]}
 env_logger = ""
 test-env-log = ""
 num = ""
 itertools = ""
 regex = ""
+array_tool = ""
